chore(metrics): address Copilot review nits (stream join, remove casts, ensure index.path attrs)